--- a/Homography.ipynb
+++ b/Homography.ipynb
@@ -142,7 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# result_dir = './results/003/'"
+    "# result_dir = './results/004/'\n",
+    "# if not os.path.exists(result_dir):\n",
+    "#     os.makedirs(result_dir)"
    ]
   },
   {
