--- a/Homography.ipynb
+++ b/Homography.ipynb
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "#visualizing the model\n",
+    "### visualizing the model\n",
     "model = homography_regression_model()\n",
     "model.summary()"
    ]
@@ -159,7 +159,7 @@
     "    height = 240\n",
     "    width = 320\n",
     "    \n",
-    "    #random read image\n",
+    "    ## random read image\n",
     "    loc_list = glob(path)\n",
     "    index = random.randint(0, len(loc_list)-1)\n",
     "    img_file_location = loc_list[index]\n",
@@ -167,7 +167,7 @@
     "    color_image = cv2.resize(color_image,(width,height))\n",
     "    gray_image = cv2.cvtColor(color_image, cv2.COLOR_RGB2GRAY)\n",
     "    \n",
-    "    #points\n",
+    "    ## points\n",
     "    y = random.randint(rho, height - rho - patch_size)  # row\n",
     "    x = random.randint(rho,  width - rho - patch_size)  # col\n",
     "    top_left_point = (x, y)\n",
@@ -180,14 +180,14 @@
     "    for point in four_points:\n",
     "        perturbed_four_points.append((point[0] + random.randint(-rho, rho), point[1] + random.randint(-rho, rho)))\n",
     "        \n",
-    "    #compute H\n",
+    "    ## compute H\n",
     "    H = cv2.getPerspectiveTransform(np.float32(four_points), np.float32(perturbed_four_points))\n",
     "    H_inverse = inv(H)\n",
     "    inv_warped_image = cv2.warpPerspective(gray_image, H_inverse, (width, height))\n",
-    "    # grab image patches\n",
+    "    ## grab image patches\n",
     "    original_patch = gray_image[y:y + patch_size, x:x + patch_size]\n",
     "    warped_patch = inv_warped_image[y:y + patch_size, x:x + patch_size]\n",
-    "    # make into dataset\n",
+    "    ## make into dataset\n",
     "    training_image = np.dstack((original_patch, warped_patch))\n",
     "    val_image = training_image.reshape((1,128,128,2))\n",
     "    \n",
@@ -292,7 +292,7 @@
     }
    ],
    "source": [
-    "#voc image test \n",
+    "### running experiment on test images  \n",
     "K.clear_session()\n",
     "model = homography_regression_model()\n",
     "model.load_weights('./pretrained_model/pretrained_weights.h5')\n",
@@ -347,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# functions for conventional homography estimation method\n",
+    "### functions for conventional homography estimation method\n",
     "def DetectAndDescribe(image):\n",
     "\n",
     "    descriptor = cv2.xfeatures2d.SIFT_create()\n",
@@ -382,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Applying conventional homography estimation method to chosen pair of images\n",
+    "### Applying conventional homography estimation method to chosen pair of images\n",
     "kpsA, featA = DetectAndDescribe(color_image)\n",
     "kpsB, featB = DetectAndDescribe(warped_image)\n",
     "\n",
@@ -410,7 +410,7 @@
     }
    ],
    "source": [
-    "# Find box coordinate using homography matrix obtained from above conventional method\n",
+    "### Find box coordinate using homography matrix obtained from above conventional method\n",
     "fin_cordi = np.zeros((4, 2))\n",
     "for i in range(4):\n",
     "    pnt1 = np.array([four_points_array[i][0], four_points_array[i][1], 1])\n",
@@ -471,7 +471,7 @@
     }
    ],
    "source": [
-    "# Visualization to compare between conventional method (green box) and CNN method (red box), ground truth (blue box)\n",
+    "### Visualization to compare between conventional method (green box) and CNN method (red box), ground truth (blue box)\n",
     "plt.imshow(rectangle_image) \n",
     "plt.title('original')\n",
     "plt.show()\n",
@@ -513,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   },
   "widgets": {
    "state": {},
